--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -32,6 +32,7 @@ regex==2024.4.16
 requests==2.31.0
 rich==13.7.1
 rpds-py==0.18.0
+scikit-learn==1.4.1
 scipy==1.13.0
 six==1.16.0
 smart-open==7.0.4
