--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -5,6 +5,7 @@ cachetools==5.3.3
 certifi==2024.2.2
 charset-normalizer==3.3.2
 click==8.1.7
+contractions==0.1.73
 gensim==4.3.2
 gitdb==4.0.11
 GitPython==3.1.43
