--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -18,6 +18,7 @@ markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 mdurl==0.1.2
 nltk==3.8.1
+num2words==0.5.13
 numpy==1.26.4
 packaging==24.0
 pandas==2.2.2
